--- a/unesco/sites/templates/sites/site_list.html
+++ b/unesco/sites/templates/sites/site_list.html
@@ -1,4 +1,8 @@
+{% block title %}Sites{% endblock title %}
+
+{% block content %}
 {% autoescape off %}
+
 <table>
   <tr>
     <th>#</th>
@@ -9,10 +13,11 @@
   {% for site in site_list %}
   <tr>
     <td>{{ site.id }}</td>
-    <td><a href="/sites/{{ site.pk }}/">{{ site.name }}</td>
+    <td><a href="{% url "sites:detail" site.pk %}">{{ site.name }}</td>
     <td>{{ site.category }}</td>
     <td>{{ site.region }}</td>
   </tr>
   {% endfor %}
 </table>
 {% endautoescape %}
+{% endblock content %}
