--- a/unesco/sites/templates/sites/whsite_list.html
+++ b/unesco/sites/templates/sites/whsite_list.html
@@ -1,4 +1,6 @@
-{% block title %}Sites{% endblock title %}
+{% extends "base.html" %}
+
+<h1>UNESCO World Heritage Sites</h1>
 
 {% block content %}
 {% autoescape off %}
