--- a/unesco/sites/templates/base.html
+++ b/unesco/sites/templates/base.html
@@ -11,9 +11,9 @@
 
 <footer>
   <p>
-    <a href="{% url 'sites:list' %}">Sites</a> |
 {% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">Logout</a> | {{ user.username }}
+    <p>Logged-in as:  {{ user.username }}, favourite city: {{ user.favourite_city }} | 
+    <a href="{% url 'logout' %}">Logout</a></p>
 {% else %}
     <a href="{% url 'login' %}">Login</a> 
 {% endif %}
