Got so far with django-authtools but failed on a reverse lookup for password-change-done. Going to back it out and try a different approach.

--- a/unesco/profiles/templates/profiles/profileuser_detail.html
+++ b/unesco/profiles/templates/profiles/profileuser_detail.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h1>{{ profileuser }}</h1>
-<h2>Favourite City</h2>
-{{ profileuser.favourite_city }}
+<h1>{{ profileuser.name }}</h1>
+Email: {{ profileuser.email }}
+Favourite city: {{ profileuser.profile.favourite_city }}
 
 {% endblock content %}
