--- a/unesco/profiles/templates/profiles/profileuser_list.html
+++ b/unesco/profiles/templates/profiles/profileuser_list.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 
-<h1>Profile Users</h1>
-
 {% block content %}
+<h2>List of User Profiles</h2>
 
 <ul>
 {% for user in profileuser_list %}
-    <li>{{ user.username }}, favourite city: {{ user.favourite_city }}, pk: {{ user.pk }}
+    <li>{{ user.email }}, favourite city: {{ user.favourite_city }}, pk: {{ user.pk }}
 {% endfor %}
 </ul>
 {% endblock content %}
