--- a/unesco/templates/registration/password_change_done.html
+++ b/unesco/templates/registration/password_change_done.html
@@ -3,6 +3,6 @@
 
 <p>Password change done.</p>
 
-<p><a href="{% url 'profiles:login' %}">Log in again</a></p>
+<p><a href="{% url 'members:login' %}">Log in again</a></p>
 
 {% endblock %}
