--- a/unesco/templates/registration/login.html
+++ b/unesco/templates/registration/login.html
@@ -6,7 +6,7 @@
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<form method="post" action="{% url 'profiles:login' %}">
+<form method="post" action="{% url 'members:login' %}">
 {% csrf_token %}
 <table>
 <tr>
