--- a/unesco/members/templates/members/member_list.html
+++ b/unesco/members/templates/members/member_list.html
@@ -5,7 +5,7 @@
 
 <ul>
 {% for member in member_list %}
-    <li>{{ member.user.email }}, favourite city: {{ member.favourite_city }}, pk: {{ member.pk }}
+    <li>{{ member.user.username }}, {{ member.user.email }}, favourite city: {{ member.favourite_city }}, pk: {{ member.pk }}
 {% endfor %}
 </ul>
 {% endblock content %}
