--- a/unesco/members/templates/members/member_detail.html
+++ b/unesco/members/templates/members/member_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>{{ member.user.name }}</h1>
+<h1>{{ member.user.username }}</h1>
 PK: {{ member.pk }}
 Email: {{ member.user.email }}
 Favourite city: {{ member.favourite_city }}
