--- a/unesco/members/templates/members/member_form.html
+++ b/unesco/members/templates/members/member_form.html
@@ -1,5 +1,13 @@
+{% extends "base.html" %}
+
+{% block content %}
+
+{% load crispy_forms_tags %}
+<h1>Please enter registration details</h1>
 <form action="" method="post">
 {% csrf_token %}
-{{ form.as_ul }}
-<input type="submit">
+{{ form|crispy }}
+<input type="submit" value="Register">
 </form>
+
+{% endblock content %}
