--- a/unesco/members/templates/members/member_list.html
+++ b/unesco/members/templates/members/member_list.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>List of Members</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <h1>List of Members</h1>
 
-<ul>
-{% for member in member_list %}
-    <li>{{ member.user.username }}, {{ member.user.email }}, favourite city: {{ member.favourite_city }}, pk: {{ member.pk }}
-{% endfor %}
-</ul>
+    <ul>
+      {% for member in member_list %}
+      <li>{{ member.user.username }}, {{ member.user.email }}, favourite city: {{ member.favourite_city }}, pk: {{ member.pk }}
+	{% endfor %}
+    </ul>
+  </div>
+</div>
 {% endblock content %}
