--- a/unesco/templates/base.html
+++ b/unesco/templates/base.html
@@ -17,72 +17,67 @@
     <title>{% block head_title %}UNESCO World Heritage Sites{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-	<!-- Brand and toggle get grouped for better mobile display -->
-	<div class="navbar-header">
-	  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-	  </button>
-	  <a class="navbar-brand" href="#">UNESCO</a>
-	</div>
+	 <div class="navbar-header">
+	   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+	     <span class="icon-bar"></span>
+	     <span class="icon-bar"></span>
+	     <span class="icon-bar"></span>
+	   </button>
+	   <a class="navbar-brand" href="#">
+	     <img src="{% static 'images/unesco-passport-stamp-50.png' %}" alt="UNESCO">
+	   </a>
+	 </div>
+	 <div class="navbar-collapse collapse navbar-responsive-collapse">
+	   <ul class="nav navbar-nav">
+	     <li class="active"><a href="#">Home</a></li>
+             <li><a href="#about">About</a></li>
+             <li><a href="#contact">Contact</a></li>
+	     <li class="dropdown">
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">Sites <b class="caret"></b></a>
+               <ul class="dropdown-menu">
+		 <li><a href="{% url 'whsites:list' %}">All</a></li>
+		 <li class="divider"></li>
+		 <li><a href="#">By Category</a></li>
+		 <li><a href="#">By Region</a></li>
+		 <li><a href="#">By State</a></li>
+               </ul>
+	     </li>
+	   </ul>
 
-	<!-- Collect the nav links, forms, and other content for toggling -->
-	<div id="navbar" class="collapse navbar-collapse">
-	  <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sites <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-		<li><a href="{% url 'whsites:list' %}">All</a></li>
-		<li class="divider"></li>
-		<li><a href="#">By Category</a></li>
-		<li><a href="#">By Region</a></li>
-		<li><a href="#">By State</a></li>
-              </ul>
-            </li>
-	  </ul>
+	   <!--
+	       <form class="navbar-form navbar-left">
+		 <input type="text" class="form-control col-lg-8" placeholder="Search">
+	       </form>
+	       -->
+	   
+           <ul class="nav navbar-nav navbar-right">
+	     {% if user.is_authenticated %}
+	     <li><a href="{% url 'members:home' %}">{{ user.username }}</a></li>
+	     <li><a href="{% url 'members:logout' %}">Logout</a></li>
+	     {% else %}
+	     <li><a href="{% url 'register' %}">Register</a></li> 
+	     <li><a href="{% url 'members:login' %}">Login</a></li> 
+	     {% endif %}
+	     
+	   </ul>
 
 
-
-
-          <ul class="nav navbar-nav navbar-right">
-	    {% if user.is_authenticated %}
-	    <li><a href="{% url 'members:home' %}">{{ user.username }}</a></li>
-	    <li><a href="{% url 'members:logout' %}">Logout</a></li>
-	    {% else %}
-	    <li><a href="{% url 'members:login' %}">Login</a></li> 
-	    {% endif %}
-	    
-	  </ul>
-
-        </div>
+	 </div>
       </div>
-    </nav>
-    <div class="container">
 
+    </div>
+    <div class="container">
       <div class="page-header" id="banner">
-        <div class="row">
-	  <div class="col-lg-8 col-md-7 col-sm-6">
-	    <!-- dummy spacer -->
-	  </div>
-	  <div class="col-lg-4 col-md-5 col-sm-6">
-            <div class="logo">
-              <a href="#"><img src="{% static 'images/unesco-passport-stamp-100.png' %}" alt="UNESCO"></a>
-            </div>
-          </div>
-	</div>
+	{% block content %}
         <div class="row">
           <div class="col-lg-12">
-	    {% block content %}
-	    {% endblock %}
+	    <h1>Page Title</h1>
+	    <h2>Page subtitle</h2>
 	  </div>
 	</div>
+	{% endblock %}
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
