--- a/unesco/whsites/templates/whsites/whsite_detail.html
+++ b/unesco/whsites/templates/whsites/whsite_detail.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <div class="row">
+    <div class="col-lg-12">
 
-{% autoescape off %}
+      {% autoescape off %}
 
-<h1>{{ whsite }}</h1>
-<img src='{{ whsite.image_url }}' />
-<h2>Description</h2>
-{{ whsite.short_description }}
-<h2>Original Page</h2>
-<a href='{{ whsite.http_url }}'>link</a>
+      <h1>{{ whsite }}</h1>
+      <img src='{{ whsite.image_url }}' />
+      <h2>Description</h2>
+      {{ whsite.short_description }}
+      <h2>Original Page</h2>
+      <a href='{{ whsite.http_url }}'>link</a>
+    </div>
+  </div>
+
 {% endautoescape %}
 
 {% endblock content %}
