--- a/unesco/templates/base.html
+++ b/unesco/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- styles borrowed form the Flatly theme at http://www.bootstrapzero.com/bootstrap-template/flatly-theme -->
+    <link rel="icon" href="/favicon.ico" sizes="16x16 24x24 32x32 64x64" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootswatch.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/unesco.css' %}">
