--- a/unesco/templates/base.html
+++ b/unesco/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-
 {% load staticfiles %}
+{% load leaflet_tags %}
 <html>
   <head>
     <meta charset="utf-8">
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootswatch.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/unesco.css' %}">
+    {% leaflet_js %}
+    {% leaflet_css %}
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
