--- a/unesco/whsites/templates/whsites/whsite_detail.html
+++ b/unesco/whsites/templates/whsites/whsite_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load leaflet_tags %}
 
 {% block content %}
   <div class="row">
@@ -11,6 +12,12 @@
       <h2>Description</h2>
       {{ whsite.short_description }}
       <p>Further details can be found at the UNESCO World Heritage Centre web site <a href='{{ whsite.http_url }}'>here</a>.</p>
+      <p>Sites within 100km of this one: <ul>
+	{% for nearby in whsite.nearby_sites %}
+	<li><a href="{% url "whsites:detail" nearby.pk %}">{{ nearby.name }}</a></li>
+	{% endfor %}
+      </ul></p>
+      {% leaflet_map "sitelocationmap" %}
     </div>
   </div>
 
