--- a/unesco/whsites/templates/whsites/whsite_list.html
+++ b/unesco/whsites/templates/whsites/whsite_list.html
@@ -10,11 +10,13 @@
       <p>{{ criteria }}</p>
       {% for whsite in whsite_list %}
       <div class="row">
-	<div class="col-xs-4 col-sm-2 col-md-1 col-lg-1"><a href="{% url "whsites:detail" whsite.pk %}"><img class="thumbnail" src="{{ whsite.image_url }}" /></a></div>
-	<div class="col-xs-4 col-sm-2 col-md-1 col-lg-1">
-	  <!-- {% leaflet_map "thumbnailmap" %} -->
-	</div>
-	<div class="col-xs-4 col-sm-8 col-md-10 col-lg-10"><a href="{% url "whsites:detail" whsite.pk %}">{{ whsite.name }}</div>
+      <div class="thumbnail-column">
+          <a href="{% url "whsites:detail" whsite.pk %}"><img class="thumbnail" src="{{ whsite.image_url }}" /></a>
+        </div>
+        <div class="col-md-12 description-column">
+          <a href="{% url "whsites:detail" whsite.pk %}">{{ whsite.name }}</a>
+          <br/>{{ whsite.states_list }}
+        </div>
       </div>
       {% endfor %}
     </div>
