--- a/unesco/templates/registration/registration_complete.html
+++ b/unesco/templates/registration/registration_complete.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-<p>Thank you for registering. Please await an email to activate your account.</p>
+<p>Thank you for signing up to UNESCO. Please await an email to activate your account.</p>
 
 {% endblock %}
