--- a/unesco/members/templates/members/member_form.html
+++ b/unesco/members/templates/members/member_form.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-lg-12">
+	<div class="row">
+		<div class="col-lg-12">
 
-{% load crispy_forms_tags %}
-<h1>Please enter registration details</h1>
-<form action="" method="post">
-{% csrf_token %}
-{{ form|crispy }}
-<input type="submit" value="Register">
-</form>
-</div>
-</div>
+			{% load crispy_forms_tags %}
+			<h1>Sign up with</h1>
+			<ul><li>Google</li><li>Facebook</li><li>Twitter</li></ul>
+			<h1>or enter your details here</h1>
+			<form action="" method="post">
+				{% csrf_token %}
+				{{ form|crispy }}
+				<input type="submit" value="Register">
+			</form>
+		</div>
+	</div>
 {% endblock content %}
