--- a/unesco/templates/base.html
+++ b/unesco/templates/base.html
@@ -35,7 +35,7 @@
 	 <div class="navbar-collapse collapse navbar-responsive-collapse">
 	   <ul class="nav navbar-nav">
 	     <li class="active"><a href="/">Home</a></li>
-             <li><a href="#about">About</a></li>
+<!--             <li><a href="#about">About</a></li>  -->
              <li><a href="{% url 'whsites:list' %}">Sites</a></li>
 
 	     <li class="dropdown">
