Closes #7 social auth

--- a/unesco/static/css/unesco.css
+++ b/unesco/static/css/unesco.css
@@ -41,6 +41,7 @@ section {
 	color: white;
 	padding-right: 5px;
 	margin-bottom: 5px;
+	overflow: hidden;
 }
 div.socialbutton img {
 	padding-right: 10px;
