--- a/unesco/members/templates/members/member_detail.html
+++ b/unesco/members/templates/members/member_detail.html
@@ -5,10 +5,21 @@
   <div class="col-lg-12">
 
     <h1>{{ member.user.username }}</h1>
-    PK: {{ member.pk }}
-    Email: {{ member.user.email }}
-    Favourite city: {{ member.favourite_city }}
-
+    <ul>
+    	<li>PK: {{ member.pk }}</li>
+    	<li>Email: {{ member.user.email }}</li>
+    	<li>Favourite city: {{ member.favourite_city }}</li>
+    	<li>Extra data: {{member.extra_data}}</li>
+    	<li>Social: {{member.social_response}}</li>
+    	{% if member.visits %}
+    	<li>Visits</li>
+    	<ul>
+    		{% for visit in member.visits %}
+    		<li>{{ visit }}</li>
+    		{% endfor %}
+    	</ul>
+    	{% endif %}
+    </ul>
   </div>
 </div>
 {% endblock content %}
