Extensive changes to close #4. Separated Visit into a separate app. Created relevant ModelForms to capture visit details. Pass site number and success_url to Form via kwargs.

--- a/unesco/members/templates/members/member_detail.html
+++ b/unesco/members/templates/members/member_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block head_title %}UNESCO World Heritage Sites: {{ member.user.username }}{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -9,8 +10,6 @@
     	<li>PK: {{ member.pk }}</li>
     	<li>Email: {{ member.user.email }}</li>
     	<li>Favourite city: {{ member.favourite_city }}</li>
-    	<li>Extra data: {{member.extra_data}}</li>
-    	<li>Social: {{member.social_response}}</li>
     	{% if member.visits %}
     	<li>Visits</li>
     	<ul>
