--- a/unesco/templates/registration/activation_complete.html
+++ b/unesco/templates/registration/activation_complete.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block head_title %}UNESCO World Heritage Sites: Activation Complete{% endblock %}
 {% block content %}
 
 <p>Thank you, you have confirmed your account.</p>
