--- a/unesco/templates/registration/login.html
+++ b/unesco/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block head_title %}UNESCO World Heritage Sites: Login{% endblock %}
 {% block content %}
 
 {% if form.errors %}
