--- a/unesco/templates/registration/password_change_done.html
+++ b/unesco/templates/registration/password_change_done.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block content %}
+{% block head_title %}UNESCO World Heritage Sites: Password Changed{% endblock %}{% block content %}
 
 <p>Password change done.</p>
 
