--- a/unesco/templates/registration/password_change_form.html
+++ b/unesco/templates/registration/password_change_form.html
@@ -1,3 +1,4 @@
+{% block head_title %}UNESCO World Heritage Sites: Password Change{% endblock %}
 <form action="" method="post">{% csrf_token %}
 <div>
 {% if form.errors %}
