--- a/unesco/templates/registration/registration_complete.html
+++ b/unesco/templates/registration/registration_complete.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block head_title %}UNESCO World Heritage Sites: Registration Complete{% endblock %}
 {% block content %}
 
 <p>Thank you for signing up to UNESCO. Please await an email to activate your account.</p>
