--- a/unesco/templates/registration/registration_form.html
+++ b/unesco/templates/registration/registration_form.html
@@ -1,3 +1,4 @@
+{% block head_title %}UNESCO World Heritage Sites: Registration Form{% endblock %}
 <form action="" method="post">
 {% csrf_token %}
 {{ form.as_ul }}
