--- a/unesco/members/templates/members/member_form.html
+++ b/unesco/members/templates/members/member_form.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block head_title %}UNESCO World Heritage Sites: Sign Up{% endblock %}
 {% block content %}
 	<div class="row">
 		<div class="col-lg-12">
