--- a/unesco/members/templates/members/member_list.html
+++ b/unesco/members/templates/members/member_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block head_title %}UNESCO World Heritage Sites: Member List{% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-lg-12">
