--- a/unesco/templates/registration/logged_out.html
+++ b/unesco/templates/registration/logged_out.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block head_title %}UNESCO World Heritage Sites: Logged Out{% endblock %}
 {% block content %}
 
 <p>Thanks for spending some time with UNESCO today.</p>
