--- a/unesco/members/templates/members/member_form.html
+++ b/unesco/members/templates/members/member_form.html
@@ -5,12 +5,12 @@
 		<div class="col-lg-12">
 
 			{% load crispy_forms_tags %}
-			<h1>Sign Up</h1>
-			<h2>Enter your details here</h2>
+			<h1>{{ member }}</h1>
+			<h2>Enter details here</h2>
 			<form action="" method="post">
 				{% csrf_token %}
 				{{ form|crispy }}
-				<input type="submit" value="Register">
+				<input type="submit" value="Save">
 			</form>
 		</div>
 	</div>
