Closes #29 by changing from 'google' to google-oauth2'

--- a/unesco/templates/home.html
+++ b/unesco/templates/home.html
@@ -19,7 +19,7 @@
         <h2>Sign Up Now</h2>
         <p>Sign up with a social network account or create a new account with your email address.</p>
         <div class="socialbutton google">
-          <a href="{% url 'social:begin' 'google' %}">
+          <a href="{% url 'social:begin' 'google-oauth2' %}">
             <img src="{% static 'images/Google-40.png' %}" alt="Sign Up with Google">
             Sign up with your Google account
           </a>
