--- a/unesco/templates/registration/login.html
+++ b/unesco/templates/registration/login.html
@@ -6,18 +6,11 @@
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
+{% load crispy_forms_tags %}
 <form method="post" action="{% url 'members:login' %}">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+
+{{ form|crispy }}
 
 <input type="submit" value="login" />
 <input type="hidden" name="next" value="{{ next }}" />
