--- a/unesco/whsites/templates/whsites/whsite_detail.html
+++ b/unesco/whsites/templates/whsites/whsite_detail.html
@@ -1,7 +1,22 @@
 {% extends "base.html" %}
 {% load leaflet_tags %}
+{% load staticfiles %}
 {% block head_title %}UNESCO World Heritage Sites: {{ whsite }}{% endblock %}
 {% block content %}
+
+  <script type="text/javascript">
+    function main_map_init(map, options) {
+    // Use Leaflet API here
+    var dataurl = '{% url "whsites:data" whsite.pk %}';
+    // Download GeoJSON via Ajax
+    $.getJSON(dataurl, function (data) {
+      // Add GeoJSON layer
+      map.setView(new L.LatLng({{ whsite.latitude }}, {{ whsite.longitude }}), 1);
+      L.geoJson(data).addTo(map);
+    });
+  }
+  </script>
+
   <div class="row">
     <div class="col-lg-12">
 
@@ -42,16 +57,6 @@
     </div>
   </div>
 
-  <script type="text/javascript">
-    function main_map_init (map, options) {
-    // Use Leaflet API here
-    var dataurl = '{% url "whsites:data" whsite.pk %}';
-    // Download GeoJSON via Ajax
-    $.getJSON(dataurl, function (data) {
-        // Add GeoJSON layer
-        L.geoJson(data).addTo(map);
-    });    }
-  </script>
 {% endautoescape %}
 
 {% endblock content %}
