--- a/unesco/members/templates/members/member_form.html
+++ b/unesco/members/templates/members/member_form.html
@@ -1,12 +1,38 @@
 {% extends "base.html" %}
+{% load staticfiles %}
+
 {% block head_title %}UNESCO World Heritage Sites: Sign Up{% endblock %}
 {% block content %}
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-6">
+	        <h2>Sign up with a social network account</h2>
+	        <div class="socialbutton google">
+	          <a href="{% url 'social:begin' 'google-oauth2' %}">
+	            <img src="{% static 'images/Google-40.png' %}" alt="Sign Up with Google">
+	            Sign up with your Google account
+	          </a>
+	        </div>
+
+	        <div class="socialbutton facebook">
+	        <a href="{% url 'social:begin' 'facebook' %}">
+	          <img src="{% static 'images/Facebook-40.png' %}" alt="Sign Up with Facebook">
+	          Sign up with your Facebook account
+	          </a>
+	        </div>
+
+	        <div class="socialbutton twitter">
+	          <a href="{% url 'social:begin' 'twitter' %}">
+	            <img src="{% static 'images/Twitter-40.png' %}" alt="Sign Up with Twitter">
+	            Sign up with your Twitter account
+	          </a>
+	        </div>
+
+		</div>
+		<div class="col-md-6">
 
 			{% load crispy_forms_tags %}
 			<h1>{{ member }}</h1>
-			<h2>Enter details here</h2>
+			<h2>or enter your details here</h2>
 			<form action="" method="post">
 				{% csrf_token %}
 				{{ form|crispy }}
