--- a/unesco/visits/templates/visits/visit_form.html
+++ b/unesco/visits/templates/visits/visit_form.html
@@ -2,7 +2,7 @@
 {% block head_title %}UNESCO World Heritage Sites: Record a Visit{% endblock %}
 {% block content %}
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 
 			{% load crispy_forms_tags %}
 			<h1>Record a visit by {{ user.username }}</h1>
