Added a photo to the home page

--- a/unesco/templates/home.html
+++ b/unesco/templates/home.html
@@ -48,7 +48,8 @@
       </div>
 
       <div class="col-md-4">
-        Some pictures and stuff.
+        <h2>Explore the Sites</h2>
+            <a href="{% url "whsites:list" %}"><img src="{% static 'images/11657409996_e2d5d6ff8a_o.jpg' %}"></a>
       </div>
     </div>
   </div>
